.. $Id$
.. $Author$
.. $Date$

Release Notes
=============

trunk
-----

Nov 3, 2017 Juan Carlos Diaz-Velez (juancarlos@icecube.umd.edu)
-------------------------------------------------------------------
Release V04-03-00
* @157950 GPU optimization: Fix double buffering in TotalEnergyToProcess? mode Resetting 
	maxNumParallelEvents_ and maxNumParallelEventsSecondFlush_ Fixes bug #1461

August 22, 2017 Juan Carlos Diaz-Velez (juancarlos@icecube.umd.edu)
-------------------------------------------------------------------
Release V04-02-02
 * generation of compressed MCPEs. 

June 26, 2017 Alex Olivas (olivas@icecube.umd.edu)
-------------------------------------------------------------------

Release V04-02-01
 * clsim now works with Geant4 versions >= 4.10.x
 * Emit I3CompressedPhotons if PhotonHistoryEntries? == 0
 * fixed benchmark.py and tray segment parameters

March 24, 2017 Juan Carlos Diaz-Velez (juancarlos@icecube.wisc.edu)
-------------------------------------------------------------------

Release V04-02-00

Major bug fixes are marked with "``***``".
Do not use older versions of clsim without these for anything!

  * r153861 + r153865: Make thread unpinning to work around stupid cluster 
    managers also work on Ubuntu, and make the tabulator raise an error if no
    CPU OpenCL devices are found.
  * r153710: I3CLSimMakePhotons can now take a wavelength acceptance directly.
    The user is responsible for getting all the scaling factors right.
  * r149069 + r150508: new parameterizations for hadronic and EM showers are used
    (thanks andrii.terliuk) -> now re-factored into CMC (thanks jvs!)
  * ``***`` r148636: fixed the hadronic shower parametrization by using the correct
    radiation length (thanks musner!)
  * ``***`` r149250: clsim/Geant4 does no longer use seawater when simulating glacial
    ice. This mostly affects late pulses from neutrons. (thanks asteuer!)
  * r149878: hole ice parameterizations can now be configured when setting